# gloom

./: .gitmodules  CMakeLists.txt  README.md
cmake/: cotire.cmake  googletest.cmake
editor/: CMakeLists.txt
editor/lib/: CMakeLists.txt
editor/lib/src/editor/: editor.cpp  editor.h  main_window.cpp  main_window.h  main_window.ui  room_browser.ui  settings.h
editor/lib/src/editor/layout/: layout_editor.cpp  layout_editor.h
editor/lib/src/model/: editor.h  resource_collection.h  resource_path.h  settings.cpp  settings.h
editor/lib/src/model/commands/: place_room.h
editor/lib/src/model/scenario/: room.h  scenario.h  token.h
editor/lib/src/resources/: resource_browser.cpp  resource_browser.h  resource_collection.h
editor/lib/src/scenario/: monster.h  room.cpp  room.h  room_id.h  scenario.cpp  scenario.h  token.h
editor/lib/src/scenario/commands/: place_room.h  place_token.h
editor/lib/src/scenario/room/: room.cpp  room.h  room_directory.h  room_factory.cpp  room_factory.h  room_filter.h  room_id.h
editor/lib/src/scenario/room_builder/: layout_editor.h  room_builder.cpp  room_builder.h
editor/lib/src/scenario/view/: room_view.cpp  room_view.h  scenario_view.cpp  scenario_view.h
editor/lib/src/util/: _moc_precompiled_header_include.h  file_util.h  flow_layout.cpp  flow_layout.h  graphics_view_zoom.cpp  graphics_view_zoom.h  hexagon.h  path_util.h
editor/lib/src/view/: main_window.cpp  main_window.h  main_window.ui  resource_browser.cpp  resource_browser.h  scenario_view.cpp  scenario_view.h
editor/resources/: generate_originals.py  generate_thumbnails.py  optimize_images.py  rename.py
editor/resources/data/: room_list.json
editor/resources/data/room_definitions/: scenario_tile_a.roomdef  scenario_tile_b.roomdef  scenario_tile_c.roomdef  scenario_tile_d.roomdef  scenario_tile_e.roomdef  scenario_tile_f.roomdef  scenario_tile_g.roomdef  scenario_tile_h.roomdef  scenario_tile_i.roomdef  scenario_tile_j_a.roomdef  scenario_tile_j_b.roomdef  scenario_tile_k.roomdef  scenario_tile_l.roomdef  scenario_tile_m.roomdef  scenario_tile_n.roomdef
editor/resources/data/room_layouts/: scenario_tile_a.hexlayout  scenario_tile_b.hexlayout  scenario_tile_c.hexlayout  scenario_tile_d.hexlayout  scenario_tile_e.hexlayout  scenario_tile_f.hexlayout  scenario_tile_g.hexlayout  scenario_tile_h.hexlayout  scenario_tile_i.hexlayout  scenario_tile_j_a.hexlayout  scenario_tile_j_b.hexlayout  scenario_tile_k.hexlayout  scenario_tile_l.hexlayout  scenario_tile_m.hexlayout  scenario_tile_n.hexlayout
editor/scripts/cmake/: copy_resources.cmake
editor/shared/: precompiled_header.h
editor/tests/: CMakeLists.txt
editor/tests/src/: commands.cpp  file_util.cpp  resource_path.cpp  room.cpp  scenario.cpp
